# imgui-rs-vitagl-renderer

./: .gitmodules  Cargo.toml  build.rs
example/simple/: Cargo.toml  Makefile.toml
example/simple/src/: main.rs
src/: imgui_vita_touch_wrapper.cpp  lib.rs
